<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/inoutText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/outputText"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsLayout"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="64sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttonsLayout"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#E91E63"
                android:text="@string/AC"
                android:textSize="20sp"
                app:cornerRadius="32dp"
                tools:ignore="TextSizeCheck" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/C"
                android:layout_margin="12dp"
                android:backgroundTint="#E91E63"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mode"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/mode"
                android:layout_margin="12dp"
                android:backgroundTint="#E91E63"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/div"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/seven"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/eight"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/nine"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mul"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/mul"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/four"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/five"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/six"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/plus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/one"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/two"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/three"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/minus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/black"
                android:text="@string/zero"
                android:textSize="32sp"
                app:cornerRadius="32dp"
                tools:ignore="DuplicateSpeakableTextCheck" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/zero"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/dot"
                android:layout_margin="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="32dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32sp"
                android:text="@string/equal"
                android:layout_margin="12dp"
                android:backgroundTint="#16A3EF"/>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>